--- a/src/games/chess/components/MoveHistory.module.css
+++ b/src/games/chess/components/MoveHistory.module.css
@@ -1,3 +1,7 @@
+@media (max-width: 480px) {
+  .container { display: none !important; }
+}
+
 .container {
   display: flex;
   flex-direction: column;
